z-index fix

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     text-align: center;
     font-size: 30px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    z-index: 999;
 }
 
 #header h1{
